@@ -929,7 +929,7 @@ using path attachment, or manually by using the \fBapparmor switch\fP
 stanza.
 .I PROFILE
 must be an absolute path to a profile and a failure will occur if the file
-doesn't exist. This stanza has no effect in User Session mode.
+doesn't exist.
 
 .nf
 apparmor load /etc/apparmor.d/usr.sbin.cupsd
